# homework-19.2

./: catalog.json  groups.json  pyproject.toml
blog/: models.py  urls.py  views.py
blog/migrations/: 0001_initial.py  0002_remove_myblog_views_myblog_views_counter.py  0003_alter_myblog_publication_sign.py
blog/templates/blog/: blog_form.html
catalog/: admin.py  forms.py  models.py  services.py  urls.py  views.py
catalog/management/commands/: read_data.py
catalog/migrations/: 0001_initial.py  0002_alter_product_category.py  0002_product_manufactured_at.py  0003_version.py  0004_product_owner.py  0005_product_is_active.py  0006_alter_product_options.py
catalog/templates/: base.html  base_list.html  contact.html  home-1.html  home.html  product_detail.html
catalog/templates/catalog/: base.html  category_list.html  contacts.html  product_detail.html  product_form.html  product_list.html
catalog/templates/catalog/includes/: inc_menu.html
catalog/templates/includes/: inc_menu.html  product_detail.html
catalog/templatetags/: my_tags.py
config/: settings.py  urls.py
users/: models.py  urls.py  views.py
users/management/commands/: csu.py
users/migrations/: 0001_initial.py  0002_user_token.py
users/templates/: login.html
users/templates/users/: password_reset_confirm.html  password_reset_done.html  password_reset_form.html
