[tool.poetry]
name = "homework 19-2"
version = "0.1.0"
description = ""
authors = ["Ksenia-Kostyuk <hatan2235@mail.ru>"]
readme = "README.md"
packages = [{include = "homework 19"}]

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.0.4"
install = "^1.3.5"
psycopg2 = "^2.9.9"
black = "^24.4.2"
pillow = "^10.3.0"
ipython = "^8.24.0"
django-dump-load-utf8 = "^0.0.4"
django-imagekit = "^5.0.0"
articles = "^0.1.0"
pytils = "^0.4.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
